

class Logging:

    def __init__(self):
        pass