# TBD HEADER

from .Base import Base

class Diag(Base):
    """
    
    """

    def __init__(self):
        pass

    def ping(self):
        # send an empty packet
        # wait for response
        # if timeout return -1
        # if ping response return response time
        pass

    def getInfo(self):
        pass
    